--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
       --md: 16px;
       --lg: 18px;
     }
+
+/*************** General */
     body {
       margin: 0;
       font-family: 'Quicksand', sans-serif;
@@ -16,7 +18,7 @@
     .inactive{
         display: none;
     }
-
+/*********** Navbar general*/
     nav {
       display: flex;
       justify-content: space-between;
@@ -80,7 +82,7 @@
       justify-content: center;
       align-items: center;
     }
-
+/***Desktop Menu*/
     .desktop-menu {
         position: absolute;
         background-color: var(--white);
@@ -119,11 +121,45 @@
         display: inline-block;
       }
 
+/******Menu en Mobile*/
 
+.mobile-menu {/* 
+    display: none; */
+    padding: 24px;
+    position: absolute;
+    top: 60px;
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .mobile-menu ul li {
+    margin-bottom: 24px;
+  }
+  .email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+  }
+  .sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+  }
 
     @media (max-width: 640px) {
+        
       .menu {
         display: block;
+        cursor: pointer;
       }
       .navbar-left ul {
         display: none;
@@ -131,4 +167,11 @@
       .navbar-email {
         display: none;
       }
+      
+    }
+
+    @media (min-width: 641px){
+        .mobile-menu {
+            display: none;
+          }
     }
